Fixes on mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,9 @@ body {
   .navtext {
     display: block;
   }
+  .main {
+    top: 60%;
+  }
   .navbardiv {
     display: none;
   }
